2 first pages ready 3rd page is completed except responsive and FA

--- a/artboard.html
+++ b/artboard.html
@@ -27,6 +27,7 @@
 
 <!-- Add your site or application content here -->
 <div class="container">
+  <span class="fsymbol smaller">TY</span>
   <div class="header">
     <div class="lang"><span>English</span>
       <img src="img/translate.svg" alt="Language"/>
@@ -42,18 +43,31 @@
     </div>
   </div>
 
-  <div class="slider"></div>
-  <div class="categories">
-    <div class="title">Categories</div>
-    <div class="cats-wrapper">
-      <div class="cats" id="one"><span>Ghandoon Group</span></div>
-      <div class="cats" id="two"><span>Jewelry Group</span></div>
-      <div class="cats" id="three"><span>Necklace Group</span></div>
-      <div class="cats" id="four"><span>Jewelry Group</span></div>
-      <div class="cats" id="five"><span>Necklace Group</span></div>
-      <div class="cats" id="six"><span>Ghandoon Group</span></div>
+  <div class="portrait2 artboard">
+    <div class="title-wrapper">
+      <h1>BEAUTY</h1>
+      <h6>We create lorem ipsum for some</h6>
     </div>
   </div>
+
+  <div class="slider sl1"></div>
+  <div class="slider sl2"></div>
+
+  <div class="services">
+    <div class="delivery"><h2>FAST DELIVERY</h2></div>
+    <div class="insurance"><h2>INSURANCE</h2></div>
+    <div class="delivery"><h2>FAST DELIVERY</h2></div>
+  </div>
+
+  <div class="customers">
+    <h2>CUSTOMERS</h2>
+    <div class="logo-wrapper">
+      <img src="icon.png" alt="">
+      <img src="icon.png" alt="">
+      <img src="icon.png" alt="">
+    </div>
+  </div>
+
   <div class="footer">
     <div class="logo">
       <div><span>ARTCO logo</span></div>
