--- a/generalshop.html
+++ b/generalshop.html
@@ -27,10 +27,8 @@
 
 <!-- Add your site or application content here -->
 <div class="container">
+  <span class="fsymbol">T</span>
   <div class="header">
-    <div class="lang"><span>English</span>
-      <img src="img/translate.svg" alt="Language"/>
-    </div>
     <div class="nav">
       <ul>
         <li>Home</li>
@@ -38,22 +36,60 @@
         <li>Some</li>
         <li>Export</li>
         <li>About us</li>
+        <li class="shop"><img src="img/shopping-cart.svg" alt="Buy"><span>4</span></li>
       </ul>
     </div>
   </div>
 
-  <div class="slider"></div>
-  <div class="categories">
-    <div class="title">Categories</div>
-    <div class="cats-wrapper">
-      <div class="cats" id="one"><span>Ghandoon Group</span></div>
-      <div class="cats" id="two"><span>Jewelry Group</span></div>
-      <div class="cats" id="three"><span>Necklace Group</span></div>
-      <div class="cats" id="four"><span>Jewelry Group</span></div>
-      <div class="cats" id="five"><span>Necklace Group</span></div>
-      <div class="cats" id="six"><span>Ghandoon Group</span></div>
+  <div class="portrait"><img src="img/ring2.jpg" alt="">
+    <h2>We think beauty is simple</h2>
+  </div>
+  <div class="categories noback">
+    <div class="title regular">Categories</div>
+    <div class="cats-title">
+      <ul>
+        <li><a href="#">MiveKhori</a></li>
+        <li><a href="#">Lavazem</a></li>
+        <li><a href="#">LoremIps</a></li>
+        <li><a href="#">FlowerSo</a></li>
+      </ul>
+    </div>
+    <div class="items-wrapper">
+      <div class="item" id="one">
+        <img src="img/0.jpg" alt="">
+        <span>Moham. D5-D6</span>
+        <div class="seemore">See more</div>
+      </div>
+      <div class="item" id="two">
+        <img src="img/ring.jpg" alt="">
+        <span>Miveh G5-D6</span>
+        <div class="seemore">See more</div>
+      </div>
+      <div class="item" id="three">
+        <img src="img/0.jpg" alt="">
+        <span>Flower D5-D6</span>
+        <div class="seemore">See more</div>
+      </div>
+      <div class="item" id="four">
+        <img src="img/0.jpg" alt="">
+        <span>Flower D5-D6</span>
+        <div class="seemore">See more</div>
+      </div>
+      <div class="item" id="five">
+        <img src="img/0.jpg" alt="">
+        <span>Flower D5-D6</span>
+        <div class="seemore">See more</div>
+      </div>
+      <div class="item" id="six">
+        <img src="img/ring.jpg" alt="">
+        <span>Flower D5-D6</span>
+        <div class="seemore">See more</div>
+      </div>
     </div>
   </div>
+
+  <div class="portrait2"><img src="img/earing.jpg" alt="">
+    <h2>loremipsum</h2></div>
   <div class="footer">
     <div class="logo">
       <div><span>ARTCO logo</span></div>
@@ -91,10 +127,7 @@
   <div class="copyright"><h6>All right reserved for <b>ARTCO</b> company, 2019</h6></div>
 </div>
 
-
 <script src="js/vendor/modernizr-3.7.1.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
 
