--- a/index-fa.html
+++ b/index-fa.html
@@ -14,7 +14,7 @@
 
   <!--  <link rel="stylesheet" href="css/flexboxgrid.min.css">-->
   <!--  <link rel="stylesheet" href="css/normalize.css">-->
-  <link rel="stylesheet" href="css/en/main.css">
+  <link rel="stylesheet" href="css/fa/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -28,30 +28,30 @@
 <!-- Add your site or application content here -->
 <div class="container">
   <div class="header">
-    <div class="lang"><span>English</span>
+    <div class="lang"><span>پارسی</span>
       <img src="img/translate.svg" alt="Language"/>
     </div>
     <div class="nav">
       <ul>
-        <li>Home</li>
-        <li>Galley</li>
-        <li>Some</li>
-        <li>Export</li>
-        <li>About us</li>
+        <li>خانه</li>
+        <li>گالری</li>
+        <li>بعضی</li>
+        <li>صادرات</li>
+        <li>درباره ما</li>
       </ul>
     </div>
   </div>
 
   <div class="slider"></div>
   <div class="categories">
-    <div class="title">Categories</div>
+    <div class="title">دسته ها</div>
     <div class="cats-wrapper">
-      <div class="cats" id="one"><span>Ghandoon Group</span></div>
-      <div class="cats" id="two"><span>Jewelry Group</span></div>
-      <div class="cats" id="three"><span>Necklace Group</span></div>
-      <div class="cats" id="four"><span>Jewelry Group</span></div>
-      <div class="cats" id="five"><span>Necklace Group</span></div>
-      <div class="cats" id="six"><span>Ghandoon Group</span></div>
+      <div class="cats" id="one"><span>گروه قندون</span></div>
+      <div class="cats" id="two"><span>گروه جواهرات</span></div>
+      <div class="cats" id="three"><span>گروه گردنبند</span></div>
+      <div class="cats" id="four"><span>گروه جواهرات</span></div>
+      <div class="cats" id="five"><span>گروه گردنبند</span></div>
+      <div class="cats" id="six"><span>گروه قندون</span></div>
     </div>
   </div>
   <div class="footer">
@@ -59,28 +59,29 @@
       <div><span>ARTCO logo</span></div>
     </div>
     <div class="site-map">
-      <span>Site Map</span>
+      <span>نقشه سایت</span>
       <div>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Gallery</a></li>
-          <li><a href="#">Catalog</a></li>
-          <li><a href="#">FAQ</a></li>
+          <li><a href="#">خانه</a></li>
+          <li><a href="#">گالری</a></li>
+          <li><a href="#">دسته ها</a></li>
+          <li><a href="#">سوالات متداول</a></li>
         </ul>
         <ul>
-          <li><a href="#">About us</a></li>
-          <li><a href="#">Reception</a></li>
+          <li><a href="#">درباره ما</a></li>
+          <li><a href="#">رسپشن</a></li>
         </ul>
       </div>
     </div>
+
     <div class="contact">
-      <h2>Contact Us</h2>
-      <div><h5>Mail:</h5></div>
+      <h2>تماس با ما</h2>
+      <div><h5>ایمیل:</h5></div>
       <div><h6>FirozeKoobi@gmail.com</h6></div>
       <div><h6>CustomerService@artco.com</h6></div>
-      <div><h5>Phone:</h5></div>
+      <div><h5>تلفن:</h5></div>
       <div><h6>+98 912 212 1773 (Sells department)</h6></div>
-      <div><h5>Address:</h5></div>
+      <div><h5>آدرس:</h5></div>
       <div><h6>Zanjan, Zanjan, Iran, Lorep ipsum</h6></div>
       <div class="c-logo">
         <div></div>
@@ -88,7 +89,7 @@
       </div>
     </div>
   </div>
-  <div class="copyright"><h6>All right reserved for <b>ARTCO</b> company, 2019</h6></div>
+  <div class="copyright"><h6>تمامی حقوق متعلق به کمپانی <b>ARTCO</b> میباشد. 1398</h6></div>
 </div>
 
 
