Home refactor created Section.home responsive (purple background should be removed)

--- a/aboutUs-fa.html
+++ b/aboutUs-fa.html
@@ -14,7 +14,7 @@
 
   <!--  <link rel="stylesheet" href="css/flexboxgrid.min.css">-->
   <!--  <link rel="stylesheet" href="css/normalize.css">-->
-  <link rel="stylesheet" href="css/en/main.css">
+  <link rel="stylesheet" href="css/fa/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -29,25 +29,25 @@
 <div class="container">
   <span class="fsymbol smaller opac">TY</span>
   <div class="header transparent">
-    <div class="lang"><span>English</span>
+    <div class="lang"><span>پارسی</span>
       <img src="img/translate.svg" alt="Language"/>
     </div>
     <div class="nav">
       <ul>
-        <li>Home</li>
-        <li>Galley</li>
-        <li>Some</li>
-        <li>Export</li>
-        <li class="hover">About us</li>
+        <li>خانه</li>
+        <li>گالری</li>
+        <li>بعضی</li>
+        <li>صادرات</li>
+        <li class="hover">درباره ما</li>
       </ul>
     </div>
   </div>
 
   <div class="half-slider">
     <div class="hstext-wrapper">
-      <h1>High Quality<br>Our Priority</h1>
-      <h6>Iranian lorem ipsum history, artifact and lorem ipsum of something, this text is just a sample to fill this
-        area</h6>
+      <h1>کیفیت بالا<br>اهمیت ما</h1>
+      <h6>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون
+        بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</h6>
     </div>
     <div class="hs-wrapper">
       <div class="indicator">
@@ -59,13 +59,12 @@
     </div>
   </div>
   <div class="categories marginbackground">
-    <div class="title nonitalic">Creation</div>
-    <h5>Iranian lorem ipsum history, artifact and lorem ipsum of something, this text is just a sample to fill this
-      area, Iranian lorem ,artifact and lorem ipsum of something, this text is just a sample to fill this
-      area, Iranian lorem history, Iranian lorem ,artifact and lorem ipsum of something, this text is just a sample to
-      fill this area, Iranian lorem history , artifact and lorem ipsum of something, this text is just a sample to fill
-      this
-      area</h5>
+    <div class="title nonitalic">تولید</div>
+    <h5>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه
+      روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود
+      ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می
+      طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی
+      ایجاد کرد.</h5>
   </div>
 
 
@@ -88,12 +87,12 @@
   </div>
 
   <div class="sponsorship">
-    <div class="title">Sponsorship</div>
+    <div class="title">حمایت</div>
     <div class="row">
       <div class="text-wrapper">
-        <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-          commodo consequat.</h5>
+        <h5>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون
+          بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با
+          هدف بهبود ابزارهای کاربردی می باشد.</h5>
       </div>
       <div class="image-wrapper">
         <img src="img/photo%20galley%20(10).jpg" alt="">
@@ -101,11 +100,13 @@
     </div>
     <div class="row">
       <div class="text-wrapper">
-        <h5>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-          nulla pariatur.
+        <h5> کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و
+          متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ
+          پیشرو در زبان فارسی ایجاد کرد.
           <br/><br/>
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-          id est laborum</h5>
+          در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط
+          سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود
+          طراحی اساسا مورد استفاده قرار گیرد.</h5>
       </div>
       <div class="image-wrapper">
         <img src="img/photo%20galley%20(9).jpg" alt="">
@@ -113,24 +114,22 @@
     </div>
   </div>
   <div class="description">
-    <div class="title">Description</div>
-    <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna
-      aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat.
-      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-      sint
-      occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</h5>
+    <div class="title">توضیحات</div>
+    <h5> در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط
+      سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود
+      طراحی اساسا مورد استفاده قرار گیرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط
+      سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود
+      طراحی اساسا مورد استفاده قرار گیرد.</h5>
   </div>
   <div class="info">
     <div class="text-wrapper">
-      <div class="title">Info</div>
+      <div class="title">اطلاعات</div>
       <div class="details">
-        <h5>Mail:</h5>
+        <h5>ایمیل:</h5>
         <h6>CustomerService@artco.com</h6>
-        <h5>Phone:</h5>
+        <h5>تلفن:</h5>
         <h6>+98 912 212 1773</h6>
-        <h6>For more information see more materials</h6>
+        <h6>برای اطلاعات بیشتر تماس بگیرید</h6>
       </div>
     </div>
 
@@ -141,28 +140,28 @@
       <div><span>ARTCO logo</span></div>
     </div>
     <div class="site-map">
-      <span>Site Map</span>
+      <span>نقشه سایت</span>
       <div>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Gallery</a></li>
-          <li><a href="#">Catalog</a></li>
-          <li><a href="#">FAQ</a></li>
+          <li><a href="#">خانه</a></li>
+          <li><a href="#">گالری</a></li>
+          <li><a href="#">کاتالوگ</a></li>
+          <li><a href="#">سوالات متداول</a></li>
         </ul>
         <ul>
-          <li><a href="#">About us</a></li>
-          <li><a href="#">Reception</a></li>
+          <li><a href="#">درباره ما</a></li>
+          <li><a href="#">رسید</a></li>
         </ul>
       </div>
     </div>
     <div class="contact">
-      <h2>Contact Us</h2>
-      <div><h5>Mail:</h5></div>
+      <h2>تماس با ما</h2>
+      <div><h5>ایمیل:</h5></div>
       <div><h6>FirozeKoobi@gmail.com</h6></div>
       <div><h6>CustomerService@artco.com</h6></div>
-      <div><h5>Phone:</h5></div>
+      <div><h5>تلفن:</h5></div>
       <div><h6>+98 912 212 1773 (Sells department)</h6></div>
-      <div><h5>Address:</h5></div>
+      <div><h5>آدرس:</h5></div>
       <div><h6>Zanjan, Zanjan, Iran, Lorep ipsum</h6></div>
       <div class="c-logo">
         <div></div>
@@ -170,7 +169,7 @@
       </div>
     </div>
   </div>
-  <div class="copyright"><h6>All right reserved for <b>ARTCO</b> company, 2019</h6></div>
+  <div class="copyright"><h6>تمامی حقوق متعلق به کمپانی <b>ARTCO</b> میباشد. 1398</h6></div>
 </div>
 
 
