Collection refactor 33% completed Farsi and responsive still Remained

--- a/artboard.html
+++ b/artboard.html
@@ -69,40 +69,100 @@
   </div>
 
   <div class="footer">
-    <div class="logo">
-      <div><span>ARTCO logo</span></div>
-    </div>
-    <div class="site-map">
-      <span>Site Map</span>
-      <div>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Gallery</a></li>
-          <li><a href="#">Catalog</a></li>
-          <li><a href="#">FAQ</a></li>
-        </ul>
-        <ul>
-          <li><a href="#">About us</a></li>
-          <li><a href="#">Reception</a></li>
-        </ul>
+    <div class="details">
+      <div class="logo">
+        <div><img src="img/logo.png" alt=""></div>
+      </div>
+      <div class="site-map">
+        <span>Explore</span>
+        <div class="wrapper">
+          <div class="left">
+            <ul>
+              <li>
+                <div class="item">
+                  <div class="arrow"><img src="img/arrow-b.png" alt="read more">
+                  </div>
+                  <a href="#">Home</a>
+                </div>
+              </li>
+              <li>
+                <div class="item">
+                  <div class="arrow"><img src="img/arrow-b.png" alt="read more">
+                  </div>
+                  <a href="#">Gallery</a>
+                </div>
+              </li>
+              <li>
+                <div class="item">
+                  <div class="arrow"><img src="img/arrow-b.png" alt="read more">
+                  </div>
+                  <a href="#">Export</a>
+                </div>
+              </li>
+              <li>
+                <div class="item">
+                  <div class="arrow"><img src="img/arrow-b.png" alt="read more">
+                  </div>
+                  <a href="#">About Us</a>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div class="right">
+            <ul>
+              <li>
+                <div class="item">
+                  <div class="arrow"><img src="img/arrow-b.png" alt="read more">
+                  </div>
+                  <a href="#">Collection</a>
+                </div>
+              </li>
+              <li>
+                <div class="item">
+                  <div class="arrow"><img src="img/arrow-b.png" alt="read more">
+                  </div>
+                  <a href="#">Wholesale</a>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="contact">
+        <h2>Contact Us</h2>
+        <div><h5>Mail:</h5></div>
+        <div><h6>FirozeKoobi@gmail.com</h6></div>
+        <div><h6>CustomerService@artco.com</h6></div>
+        <div><h5>Phone:</h5></div>
+        <div><h6>+98 912 212 1773 (Sells department)</h6></div>
+        <div><h5>Address:</h5></div>
+        <div><h6>Zanjan, Zanjan, Iran, Lorep ipsum</h6></div>
+      </div>
+      <div class="newsletter">
+        <h2>Newsletter</h2>
+        <label for="inp" class="inp">
+          <input type="text" id="inp" placeholder="&nbsp;">
+          <span class="label">Enter your email</span>
+          <span class="border"></span>
+        </label>
+        <button type="submit">Submit</button>
       </div>
     </div>
-    <div class="contact">
-      <h2>Contact Us</h2>
-      <div><h5>Mail:</h5></div>
-      <div><h6>FirozeKoobi@gmail.com</h6></div>
-      <div><h6>CustomerService@artco.com</h6></div>
-      <div><h5>Phone:</h5></div>
-      <div><h6>+98 912 212 1773 (Sells department)</h6></div>
-      <div><h5>Address:</h5></div>
-      <div><h6>Zanjan, Zanjan, Iran, Lorep ipsum</h6></div>
-      <div class="c-logo">
-        <div></div>
-        <div></div>
+    <div class="social">
+      <div class="icons">
+        <a href="#">
+          <div class="icon" id="instagram"></div>
+        </a>
+        <a href="#">
+          <div class="icon" id="facebook"></div>
+        </a>
+        <a href="#">
+          <div class="icon" id="linkedin"></div>
+        </a>
       </div>
     </div>
+    <div class="copyright"><h6>All right reserved for <b>ARTCO</b> company, 2019</h6></div>
   </div>
-  <div class="copyright"><h6>All right reserved for <b>ARTCO</b> company, 2019</h6></div>
 </div>
 
 
