--- a/generalshop-fa.html
+++ b/generalshop-fa.html
@@ -90,40 +90,100 @@
   <div class="portrait2"><img src="img/earing.jpg" alt="">
     <h2>لورم ایپسوم</h2></div>
   <div class="footer">
-    <div class="logo">
-      <div><span>ARTCO logo</span></div>
-    </div>
-    <div class="site-map">
-      <span>نقشه سایت</span>
-      <div>
-        <ul>
-          <li><a href="#">خانه</a></li>
-          <li><a href="#">گالری</a></li>
-          <li><a href="#">کاتالوگ</a></li>
-          <li><a href="#">سوالات متداول</a></li>
-        </ul>
-        <ul>
-          <li><a href="#">درباره ما</a></li>
-          <li><a href="#">رسید</a></li>
-        </ul>
+    <div class="details">
+      <div class="logo">
+        <div><img src="img/logo.png" alt=""></div>
+      </div>
+      <div class="site-map">
+        <span>اکسپلور</span>
+        <div class="wrapper">
+          <div class="left">
+            <ul>
+              <li>
+                <div class="item">
+                  <div class="arrow"><img src="img/arrow-b.png" alt="read more">
+                  </div>
+                  <a href="#">خانه</a>
+                </div>
+              </li>
+              <li>
+                <div class="item">
+                  <div class="arrow"><img src="img/arrow-b.png" alt="read more">
+                  </div>
+                  <a href="#">گالری</a>
+                </div>
+              </li>
+              <li>
+                <div class="item">
+                  <div class="arrow"><img src="img/arrow-b.png" alt="read more">
+                  </div>
+                  <a href="#">صادرات</a>
+                </div>
+              </li>
+              <li>
+                <div class="item">
+                  <div class="arrow"><img src="img/arrow-b.png" alt="read more">
+                  </div>
+                  <a href="#">درباره ما</a>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div class="right">
+            <ul>
+              <li>
+                <div class="item">
+                  <div class="arrow"><img src="img/arrow-b.png" alt="read more">
+                  </div>
+                  <a href="#">مجموعه</a>
+                </div>
+              </li>
+              <li>
+                <div class="item">
+                  <div class="arrow"><img src="img/arrow-b.png" alt="read more">
+                  </div>
+                  <a href="#">عمده فروشی</a>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="contact">
+        <h2>ارتباط با ما</h2>
+        <div><h5>ایمیل :</h5></div>
+        <div><h6>FirozeKoobi@gmail.com</h6></div>
+        <div><h6>CustomerService@artco.com</h6></div>
+        <div><h5>تلفن :</h5></div>
+        <div><h6>+98 912 212 1773 (Sells department)</h6></div>
+        <div><h5>نشانی :</h5></div>
+        <div><h6>Zanjan, Zanjan, Iran, Lorep ipsum</h6></div>
+      </div>
+      <div class="newsletter">
+        <h2>خبرنامه</h2>
+        <label for="inp" class="inp">
+          <input type="text" id="inp" placeholder="&nbsp;">
+          <span class="label">ایمیل را وارد کنید</span>
+          <span class="border"></span>
+        </label>
+        <button type="submit">ثبت</button>
       </div>
     </div>
-    <div class="contact">
-      <h2>تماس با ما</h2>
-      <div><h5>ایمیل:</h5></div>
-      <div><h6>FirozeKoobi@gmail.com</h6></div>
-      <div><h6>CustomerService@artco.com</h6></div>
-      <div><h5>تلفن:</h5></div>
-      <div><h6>+98 912 212 1773 (Sells department)</h6></div>
-      <div><h5>آدرس:</h5></div>
-      <div><h6>Zanjan, Zanjan, Iran, Lorep ipsum</h6></div>
-      <div class="c-logo">
-        <div></div>
-        <div></div>
+    <div class="social">
+      <div class="icons">
+        <a href="#">
+          <div class="icon" id="instagram"></div>
+        </a>
+        <a href="#">
+          <div class="icon" id="facebook"></div>
+        </a>
+        <a href="#">
+          <div class="icon" id="linkedin"></div>
+        </a>
       </div>
     </div>
+    <div class="copyright"><h6>تمامی حقوق برای شرکت <b>ARTCO</b>محفوظ است، 1398</h6></div>
   </div>
-  <div class="copyright"><h6>تمامی حقوق متعلق به کمپانی <b>ARTCO</b> میباشد. 1398</h6></div>
 </div>
 
 <script src="js/vendor/modernizr-3.7.1.min.js"></script>
