After Google Docs Updates: Home Updated

--- a/home-fa.html
+++ b/home-fa.html
@@ -42,6 +42,12 @@
           <li>درباره ما</li>
         </ul>
       </div>
+      <div class="lang">
+        <select data-menu>
+          <option selected>فارسی</option>
+          <option>انگلیسی</option>
+        </select>
+      </div>
     </div>
     <div class="description">
       <div class="home-title">
@@ -59,10 +65,12 @@
           <h1>طراحی شیک مهمه</h1>
           <h6>طراحی شیک و چند نمونه متن لورم ایپسوم طراحی شیک و چند نمونه متن لورم ایپسوم طراحی شیک نمونه متن لورم
             ایپسوم طراحی شیک و چند نمونه متن لورم ایپسوم طراحی شیک و چند نمونه متن لورم ایپسوم طراحی شیک</h6>
-          <div class="readmore">
-            <img src="img/arrow.png" alt="read more">
-            <h4>بیشتر بخوانید</h4>
-          </div>
+          <button class="learn-more">
+            <span class="circle" aria-hidden="true">
+              <span class="icon arrow"></span>
+            </span>
+            <span class="button-text">بیشتر بخوانید</span>
+          </button>
         </div>
       </div>
       <div class="titles">
@@ -81,10 +89,12 @@
           <h1>مجموعه</h1>
           <h6>طراحی شیک و چند نمونه متن لورم ایپسوم طراحی شیک و چند نمونه متن لورم ایپسوم طراحی شیک نمونه متن لورم
             ایپسوم طراحی شیک و چند نمونه متن لورم ایپسوم طراحی شیک و چند نمونه متن لورم ایپسوم طراحی شیک</h6>
-          <div class="readmore">
-            <img src="img/arrow.png" alt="read more">
-            <h4>بیشتر بخوانید</h4>
-          </div>
+          <button class="learn-more">
+            <span class="circle" aria-hidden="true">
+              <span class="icon arrow"></span>
+            </span>
+            <span class="button-text">بیشتر بخوانید</span>
+          </button>
         </div>
       </div>
     </div>
@@ -102,10 +112,14 @@
         </ul>
         <h5>چند نمونه متن لورم ایپسوم طراحی شیک نمونه متن لورم
           ایپسوم طراحی شیک و چند نمونه متن لورم ایپسوم</h5>
-        <div class="readmore">
-          <img src="img/arrow.png" alt="read more">
-          <h4>رفتن به صفحه صادرات</h4>
-        </div>
+        <h5 class="off">یک متن نمونه</h5>
+        <h5 class="off">آسمان همیشه ابری نیست</h5>
+        <button class="learn-more">
+            <span class="circle" aria-hidden="true">
+              <span class="icon arrow"></span>
+            </span>
+          <span class="button-text">صفحه صادرات</span>
+        </button>
       </div>
     </div>
     <div class="ourcustomers">
@@ -123,7 +137,23 @@
           <div><img src="img/logo.png" alt=""></div>
         </div>
         <div class="site-map">
-          <span>اکسپلور</span>
+          <span>اکسپلور
+            <span class="footer-slider-wrapper">
+              <span class="footer-slider roll-it">
+                <span>دقت</span>
+                <span>ظرافت</span>
+                <span>طراحی</span>
+                <span>این</span>
+                <span>چند</span>
+                <span>نمونه</span>
+                <span>کلمه</span>
+                <span>لورم</span>
+                <span>ایپسوم</span>
+                <span>است</span>
+                <span>آخری</span>
+              </span>
+            </span>
+          </span>
           <div class="wrapper">
             <div class="left">
               <ul>
@@ -194,7 +224,7 @@
             <span class="label">ایمیل را وارد کنید</span>
             <span class="border"></span>
           </label>
-          <button type="submit">ثبت</button>
+          <button class="submit"></button>
         </div>
       </div>
       <div class="social">
