--- a/home.html
+++ b/home.html
@@ -42,6 +42,12 @@
           <li>About us</li>
         </ul>
       </div>
+      <div class="lang">
+        <select data-menu>
+          <option selected>English</option>
+          <option>Farsi</option>
+        </select>
+      </div>
     </div>
     <div class="description">
       <div class="home-title">
@@ -61,10 +67,12 @@
             some
             text. Lorem ipsum as a test for this is just a text Good design matters and some
             text. Lorem ipsum as a test for its section. this is just a text its section. this is just a text</h6>
-          <div class="readmore">
-            <img src="img/arrow.png" alt="read more">
-            <h4>Read more</h4>
-          </div>
+          <button class="learn-more">
+            <span class="circle" aria-hidden="true">
+              <span class="icon arrow"></span>
+            </span>
+            <span class="button-text">Read More</span>
+          </button>
         </div>
       </div>
       <div class="titles">
@@ -84,10 +92,12 @@
           <h6>Good design matters and some text. Lorem as a test for this is just a text Good design matters and
             Lorem ipsum as a test for this is just a text Good design matters and some
             text. Lorem ipsum as a test for its section. this is just a text its section. this is just a text</h6>
-          <div class="readmore">
-            <img src="img/arrow.png" alt="read more">
-            <h4>Read more</h4>
-          </div>
+          <button class="learn-more">
+            <span class="circle" aria-hidden="true">
+              <span class="icon arrow"></span>
+            </span>
+            <span class="button-text">Read More</span>
+          </button>
         </div>
       </div>
     </div>
@@ -107,10 +117,14 @@
           Lorem ipsum as a test for this is just a text some
           text. ipsum as a test for this is just a text Good design matters and some
           text.</h5>
-        <div class="readmore">
-          <img src="img/arrow.png" alt="read more">
-          <h4>Go to export page</h4>
-        </div>
+        <h5 class="off">Never trust a smile, Never trust a smile, Never trust a smile, Never trust a smile, </h5>
+        <h5 class="off">Pixel is not here, Pixel is not here, Pixel is not here, Pixel is not here, </h5>
+        <button class="learn-more">
+            <span class="circle" aria-hidden="true">
+              <span class="icon arrow"></span>
+            </span>
+          <span class="button-text">Read More</span>
+        </button>
       </div>
     </div>
     <div class="ourcustomers">
@@ -128,7 +142,23 @@
           <div><img src="img/logo.png" alt=""></div>
         </div>
         <div class="site-map">
-          <span>Explore</span>
+          <span>Explore
+            <span class="footer-slider-wrapper">
+              <span class="footer-slider roll-it">
+                <span>Smart</span>
+                <span>Inspiring</span>
+                <span>Inovative</span>
+                <span>Technotile</span>
+                <span>magic</span>
+                <span>Interesting</span>
+                <span>Reliable</span>
+                <span>immortal</span>
+                <span>Divine</span>
+                <span>Lovely</span>
+                <span>Pixel</span>
+              </span>
+            </span>
+          </span>
           <div class="wrapper">
             <div class="left">
               <ul>
@@ -199,7 +229,7 @@
             <span class="label">Enter your email</span>
             <span class="border"></span>
           </label>
-          <button type="submit">Submit</button>
+          <button class="submit"></button>
         </div>
       </div>
       <div class="social">
